[gd_scene load_steps=3 format=3 uid="uid://dvobswjucih86"]

[ext_resource type="Script" uid="uid://bxg43hk0xtde4" path="res://GameLogic/MusicTrack/music_note.gd" id="1_2o68q"]
[ext_resource type="Texture2D" uid="uid://bbhktfg0k63w6" path="res://Assets/musicnote.png" id="1_7q3of"]

[node name="MusicNote" type="Node2D"]
script = ExtResource("1_2o68q")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_7q3of")

[node name="DestroyTimer" type="Timer" parent="."]

[connection signal="timeout" from="DestroyTimer" to="." method="_on_destroy_timer_timeout"]
